--- a/deploy/prod/docker-compose.yml
+++ b/deploy/prod/docker-compose.yml
@@ -3,32 +3,32 @@ version: '3.8'
 services:
   app:
     build:
-      context: ../../
+      context: ../..
       dockerfile: deploy/prod/Dockerfile
     container_name: laravel_app_prod
     volumes:
-      - ./:/var/www
+      - ../..:/var/www
     depends_on:
       - db
+    env_file:
+      - .env
+    environment:
+      - DB_CONNECTION=${DB_CONNECTION}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
     entrypoint: ["/usr/local/bin/entrypoint"]
     command: ["php-fpm"]
-    environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
-      - DB_CONNECTION=pgsql
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_DATABASE=laravel_prod
-      - DB_USERNAME=produser
-      - DB_PASSWORD=prodpassword
 
   nginx:
     image: nginx:stable
     container_name: nginx_server_prod
     ports:
-      - "8000:80"
+      - 8001:80  # <- Aqui está a mudança
     volumes:
-      - ./:/var/www
+      - ../..:/var/www:ro
       - ../../nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
@@ -37,11 +37,11 @@ services:
     image: postgres:15
     container_name: pgsql_db_prod
     environment:
-      POSTGRES_DB: laravel_prod
-      POSTGRES_USER: produser
-      POSTGRES_PASSWORD: prodpassword
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5433:5432"
+      - 5434:5432
     volumes:
       - pgdata_prod:/var/lib/postgresql/data
 
