--- a/deploy/homolog/docker-compose.yml
+++ b/deploy/homolog/docker-compose.yml
@@ -3,32 +3,32 @@ version: '3.8'
 services:
   app:
     build:
-      context: ../../
+      context: ../..
       dockerfile: deploy/homolog/Dockerfile
     container_name: laravel_app_homolog
     volumes:
-      - ./:/var/www
+      - ../..:/var/www
     depends_on:
       - db
+    env_file:
+      - .env
+    environment:
+      - DB_CONNECTION=${DB_CONNECTION}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
     entrypoint: ["/usr/local/bin/entrypoint"]
     command: ["php-fpm"]
-    environment:
-      - APP_ENV=homolog
-      - APP_DEBUG=true
-      - DB_CONNECTION=pgsql
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_DATABASE=laravel_homolog
-      - DB_USERNAME=homologuser
-      - DB_PASSWORD=homologpassword
 
   nginx:
     image: nginx:stable
     container_name: nginx_server_homolog
     ports:
-      - "8001:80"
+      - 8000:80
     volumes:
-      - ./:/var/www
+      - ../..:/var/www
       - ../../nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
@@ -37,11 +37,11 @@ services:
     image: postgres:15
     container_name: pgsql_db_homolog
     environment:
-      POSTGRES_DB: laravel_homolog
-      POSTGRES_USER: homologuser
-      POSTGRES_PASSWORD: homologpassword
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5434:5432"
+      - 5432:5432
     volumes:
       - pgdata_homolog:/var/lib/postgresql/data
 
