--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -18,11 +18,22 @@ jobs:
         with:
           php-version: '8.4'
 
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-      - name: Install Dependencies
+      - name: Install PHP Dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Build Assets
+        run: npm run build
 
       - name: Generate App Key
         run: php artisan key:generate
